objects/OperationHistory__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>期日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AggregateActualTime__c</fullName>
        <label>実績時間(集計)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AggregateUsingElementAmount__c</fullName>
        <label>使用部材金額(集計)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AggregateUsingElementQuantity__c</fullName>
        <label>使用部材数量(集計)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallCenterReceptionNo__c</fullName>
        <label>コールセンター受付番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先責任者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>対応履歴</relationshipLabel>
        <relationshipName>OperationHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CorrespondenceNumber__c</fullName>
        <label>対応番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>コメント</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate_TEXT__c</fullName>
        <formula>TEXT(DATEVALUE(EndDatetime__c))</formula>
        <label>対応完了日(TEXT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <formula>DATEVALUE(EndDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対応完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDatetime__c</fullName>
        <label>対応完了日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>対応区分</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>連携キー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>対応内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PeriodSummary__c</fullName>
        <label>時間分概要</label>
        <summarizedField>OperationHistoryPeriod__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>OperationHistoryPeriod__c.WorkDivision__c</field>
            <operation>equals</operation>
            <value>0,1</value>
        </summaryFilterItems>
        <summaryForeignKey>OperationHistoryPeriod__c.OperationHistory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>優先度</label>
        <picklist>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ref_CustomerContactPerson__c</fullName>
        <formula>Support__r.CustomerContactPerson__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>御担当者_参照</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_UnitBody__c</fullName>
        <formula>Support__r.UnitBody__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体号機_参照</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responce__c</fullName>
        <formula>CASE(Interaction__c , 1, &quot;一次&quot;, 2, &quot;二次&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対応</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponcedBy__c</fullName>
        <label>対応者</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate_TEXT__c</fullName>
        <formula>TEXT(DATEVALUE(StartDatetime__c))</formula>
        <label>対応開始(TEXT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <formula>DATEVALUE(StartDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>対応開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDatetime__c</fullName>
        <label>対応開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客対応票</label>
        <referenceTo>Support__c</referenceTo>
        <relationshipLabel>対応履歴</relationshipLabel>
        <relationshipName>OperationHistries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>対応履歴</label>
    <nameField>
        <label>件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>